--- a/app/src/main/res/drawable/line_horizontal.xml
+++ b/app/src/main/res/drawable/line_horizontal.xml
@@ -1,5 +1,5 @@
 <rotate xmlns:android="http://schemas.android.com/apk/res/android">
     <shape>
-        <solid android:color="#808080" />
+        <solid android:color="@color/gray" />
     </shape>
 </rotate>
