--- a/app/src/main/res/drawable/out_line_border.xml
+++ b/app/src/main/res/drawable/out_line_border.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/_10sdp" />
+    <corners android:radius="@dimen/_5sdp" />
+    <solid android:color="@color/white"/>
 
     <stroke
         android:width="1dp"
