--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/light_gray"
     android:layoutDirection="ltr"
+    android:orientation="vertical"
     tools:context=".ReadOrWriteActivity">
 
     <LinearLayout
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
 
         <TextView
             android:id="@+id/not_connect"
@@ -33,7 +35,7 @@
             android:layout_weight="1">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
@@ -58,6 +60,7 @@
                         android:layout_height="match_parent">
 
                     </android.support.v7.widget.RecyclerView>
+
                 </LinearLayout>
             </LinearLayout>
         </HorizontalScrollView>
@@ -67,188 +70,26 @@
             android:layout_height="0.5dp"
             android:background="@color/SteelBlue3" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <RadioGroup
-                    android:id="@+id/way"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/single"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/single"
-                        android:textSize="@dimen/text_size_16"
-                        android:theme="@style/MyCheckBox" />
-
-                    <RadioButton
-                        android:id="@+id/loop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/loop"
-                        android:textSize="@dimen/text_size_16"
-                        android:theme="@style/MyCheckBox" />
-                </RadioGroup>
-
-                <RadioGroup
-                    android:id="@+id/type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/layout_marginTop_10"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/c"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/c"
-                        android:textSize="@dimen/text_size_16"
-                        android:theme="@style/MyCheckBox" />
-
-                    <RadioButton
-                        android:id="@+id/b"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/b"
-                        android:textSize="@dimen/text_size_16"
-                        android:theme="@style/MyCheckBox" />
-
-                    <RadioButton
-                        android:id="@+id/gb"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/gb"
-                        android:textSize="@dimen/text_size_16"
-                        android:theme="@style/MyCheckBox" />
-                </RadioGroup>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.4">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/Tag_Count"
-                            android:textSize="@dimen/text_size_16" />
-
-                        <TextView
-                            android:id="@+id/tagCount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/DodgerBlue"
-                            android:textSize="@dimen/text_size_16" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.6">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/speed"
-                            android:textSize="@dimen/text_size_16" />
-
-                        <TextView
-                            android:id="@+id/speed"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/DodgerBlue"
-                            android:textSize="@dimen/text_size_16" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/TotalCount"
-                        android:textSize="@dimen/text_size_16" />
-
-                    <TextView
-                        android:id="@+id/readCount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/DodgerBlue"
-                        android:textSize="@dimen/text_size_16" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/time"
-                        android:textSize="@dimen/text_size_16" />
-
-                    <TextView
-                        android:id="@+id/timeCount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="00:00:00(s)"
-                        android:textSize="@dimen/text_size_16" />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/read"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp"
                 android:layout_weight="1"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/cairo_bold"
                 android:text="@string/readCard"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_size_20" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12ssp" />
 
             <Button
                 android:id="@+id/cus_read"
@@ -258,100 +99,71 @@
                 android:text="@string/cus_readCard"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_size_20" />
+                android:textSize="@dimen/text_size_20"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/stop"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp"
                 android:layout_weight="1"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/cairo_bold"
                 android:text="@string/stop"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_size_20" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12ssp" />
 
             <Button
                 android:id="@+id/clean"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp"
                 android:layout_weight="1"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/cairo_bold"
                 android:text="@string/clean"
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_size_20" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12ssp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_shape"
+                android:elevation="@dimen/_2sdp"
+                android:orientation="vertical">
+
+                <Spinner
+                    android:id="@+id/spinner_tybe_scan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/TRANSPARENT"
+                    android:clickable="false"
+                    android:dropDownWidth="@dimen/_120sdp"
+                    android:entries="@array/scan_type"
+                    android:popupBackground="@drawable/out_line_border"
+                    android:theme="@style/mySpinnerItemStyle" />
+
+                <TextView
+                    android:id="@+id/scan_type_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
+                    android:fontFamily="@font/cairo_bold"
+                    android:gravity="center"
+                    android:text="@string/single"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11ssp" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </LinearLayout>
-
-    <cc.trity.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:clickable="true"
-        app:borderWidth="0dp"
-        app:elevation="5dp"
-        app:fabSize="normal"
-        app:layout_anchor="@id/tabHead"
-        app:layout_anchorGravity="top|right|end">
-
-        <!--        <cc.trity.floatingactionbutton.FloatingActionButton-->
-        <!--            android:id="@+id/exportExcel"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:clickable="true"-->
-        <!--            app:borderWidth="0dp"-->
-        <!--            app:elevation="5dp"-->
-        <!--            app:fabSize="mini"-->
-        <!--            app:fab_colorNormal="#0099CC"-->
-        <!--            app:fab_icon="@mipmap/excel" />-->
-
-
-        <cc.trity.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_cus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:borderWidth="0dp"
-            app:elevation="5dp"
-            app:fabSize="mini"
-            app:fab_colorNormal="#0099CC"
-            app:fab_icon="@mipmap/write_cus" />
-
-        <cc.trity.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:borderWidth="0dp"
-            app:elevation="5dp"
-            app:fabSize="mini"
-            app:fab_colorNormal="#0099CC"
-            app:fab_icon="@mipmap/write_user" />
-
-        <cc.trity.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_epc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:borderWidth="0dp"
-            app:elevation="5dp"
-            app:fabSize="mini"
-            app:fab_colorNormal="#0099CC"
-            app:fab_icon="@mipmap/write_epc" />
-
-        <cc.trity.floatingactionbutton.FloatingActionButton
-            android:id="@+id/tag_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            app:borderWidth="0dp"
-            app:elevation="5dp"
-            app:fabSize="mini"
-            app:fab_colorNormal="#0099CC"
-            app:fab_icon="@mipmap/tag_info" />
-
-    </cc.trity.floatingactionbutton.FloatingActionsMenu>
 
 </android.support.design.widget.CoordinatorLayout>
