--- a/app/src/main/res/layout/entry_layout.xml
+++ b/app/src/main/res/layout/entry_layout.xml
@@ -21,45 +21,6 @@
         android:textSize="@dimen/text_size_23" />
 
     <LinearLayout
-        android:layout_width="@dimen/layout_width_300"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/ip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@drawable/out_line_border"
-            android:digits="0123456789."
-            android:ems="10"
-            android:hint="xx . xx . x . x"
-            android:inputType="number|numberDecimal"
-            android:paddingStart="@dimen/_15sdp"
-            android:paddingTop="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:paddingBottom="@dimen/_10sdp" />
-
-        <EditText
-            android:id="@+id/port"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:background="@drawable/out_line_border"
-            android:ems="10"
-            android:hint="port"
-            android:inputType="numberSigned|number"
-            android:maxLength="6"
-            android:paddingStart="@dimen/_5sdp"
-            android:paddingTop="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_10sdp" />
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
@@ -71,8 +32,8 @@
             android:layout_width="@dimen/layout_width_300"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/button_style"
-            android:text="@string/readOrWrite"
+            android:background="@drawable/button_selector"
+            android:text="@string/readCard"
             android:textAllCaps="false"
             android:textSize="@dimen/text_size_20" />
 
@@ -82,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/layout_marginTop_20"
-            android:background="@drawable/button_style"
+            android:background="@drawable/button_selector"
             android:text="@string/rfid"
             android:textAllCaps="false"
             android:textSize="@dimen/text_size_20" />
@@ -93,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/layout_marginTop_20"
-            android:background="@drawable/button_style"
+            android:background="@drawable/button_selector"
             android:text="@string/upgradeBase"
             android:textAllCaps="false"
             android:textSize="@dimen/text_size_20" />
@@ -104,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/layout_marginTop_20"
-            android:background="@drawable/button_style"
+            android:background="@drawable/button_selector"
             android:text="@string/deviceInfo"
             android:textAllCaps="false"
             android:textSize="@dimen/text_size_20" />
