--- a/app/src/main/res/layout/recycle_item.xml
+++ b/app/src/main/res/layout/recycle_item.xml
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="-"
-        android:textSize="@dimen/text_size_20" />
+        android:textSize="@dimen/text_size_20"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/epc"
@@ -46,7 +47,8 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="-"
-        android:textSize="@dimen/text_size_20" />
+        android:textSize="@dimen/text_size_20"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/userData"
@@ -56,7 +58,8 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="-"
-        android:textSize="@dimen/text_size_20" />
+        android:textSize="@dimen/text_size_20"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/reserveData"
@@ -66,7 +69,8 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="-"
-        android:textSize="@dimen/text_size_20" />
+        android:textSize="@dimen/text_size_20"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/count"
@@ -74,7 +78,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="-"
-        android:textSize="@dimen/text_size_20" />
+        android:textSize="@dimen/text_size_20"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/rssi"
@@ -82,5 +87,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="-"
-        android:textSize="@dimen/text_size_20" />
+        android:textSize="@dimen/text_size_20"
+        android:visibility="gone" />
 </LinearLayout>
