--- a/app/src/main/res/values/cusSpinner.xml
+++ b/app/src/main/res/values/cusSpinner.xml
@@ -2,9 +2,9 @@
 <resources>
     <string-array name="base">
         <item>0|Tari=25us，FM0，LHF=40KHz</item>
-        <item>1|密集读取模式</item>
+        <item>1|Dense read mode</item>
         <item>2|Tari=25us，Miller4，LHF=300KHz</item>
-        <item>3|快速读取模式</item>
+        <item>3|Fast read mode</item>
         <item>4|Tari=25us，Miller4，LHF=320KHz</item>
         <item>Auto</item>
     </string-array>
@@ -15,11 +15,11 @@
         <item>3</item>
     </string-array>
     <string-array name="q">
-        <item>0|单标签</item>
+        <item>0|Single tag</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
-        <item>4|多标签</item>
+        <item>4|More labels</item>
         <item>5</item>
         <item>6</item>
         <item>7</item>
@@ -33,18 +33,18 @@
         <item>15</item>
     </string-array>
     <string-array name="inventory">
-        <item>A面盘存</item>
-        <item>B面盘存</item>
-        <item>A|B双面盘存</item>
+        <item>Flag A</item>
+        <item>Flag B</item>
+        <item>Flag A&amp;B</item>
     </string-array>
     <string-array name="opera">
-        <item>关闭</item>
-        <item>打开</item>
+        <item>Close</item>
+        <item>Open</item>
     </string-array>
 
     <string-array name="AutoFrequency">
-        <item>指定频率</item>
-        <item>自动频率</item>
+        <item>Fixed Frequency </item>
+        <item>Auto Frequency</item>
     </string-array>
 
     <string-array name="frequency">
@@ -61,31 +61,31 @@
     </string-array>
 
     <string-array name="cus_mode">
-        <item>不匹配</item>
+        <item>Mismatching</item>
         <item>EPC</item>
         <item>TID</item>
         <item>UserData</item>
     </string-array>
     <string-array name="cus_write_area">
-        <item>保留区</item>
-        <item>EPC区</item>
-        <item>TID区</item>
-        <item>UserData区</item>
+        <item>Reserved Area</item>
+        <item>EPC Area</item>
+        <item>TID Area</item>
+        <item>UserData Area</item>
     </string-array>
 
     <string-array name="lock_area">
-        <item>灭活密码区</item>
-        <item>访问密码区</item>
-        <item>EPC区</item>
-        <item>TID区</item>
-        <item>用户数据区</item>
+        <item>Destroy Pwd</item>
+        <item>Access Pwd</item>
+        <item>EPC</item>
+        <item>TID</item>
+        <item>UserData</item>
     </string-array>
 
     <string-array name="lock_type">
-        <item>解锁</item>
-        <item>锁定</item>
-        <item>永久解锁</item>
-        <item>永久锁定</item>
+        <item>Unlock</item>
+        <item>Lock</item>
+        <item>Permanent unlock</item>
+        <item>Permanent lock</item>
     </string-array>
 
     <string-array name="ant">
@@ -134,12 +134,12 @@
     </string-array>
 
     <string-array name="gpo">
-        <item>低</item>
-        <item>高</item>
+        <item>low</item>
+        <item>high</item>
     </string-array>
     <string-array name="wi_state">
-        <item>WIFI禁用</item>
-        <item>WIFI启用</item>
+        <item>Wifi disabled</item>
+        <item>WIFI enabled</item>
     </string-array>
 
     <string-array name="wi_safe">
@@ -149,7 +149,7 @@
     </string-array>
 
     <string-array name="wi_encryption">
-        <item>自动</item>
+        <item>auto</item>
         <item>TKIP</item>
         <item>AES</item>
     </string-array>
@@ -164,42 +164,42 @@
     </string-array>
 
     <string-array name="beep_status">
-        <item>停止</item>
-        <item>响</item>
+        <item>stop</item>
+        <item>loud</item>
     </string-array>
 
     <string-array name="beep_mode">
-        <item>响一次</item>
-        <item>常响</item>
+        <item>once</item>
+        <item>keep</item>
     </string-array>
 
     <string-array name="start_condition">
-        <item>触发关闭</item>
-        <item>低电平触发</item>
-        <item>高电平触发</item>
-        <item>上升沿触发</item>
-        <item>下降沿触发</item>
-        <item>任意边沿触发</item>
+        <item>Trigger off</item>
+        <item>Low level trigger</item>
+        <item>High level trigger</item>
+        <item>Rising edge trigger</item>
+        <item>Falling edge trigger</item>
+        <item>Any edge trigger</item>
     </string-array>
 
     <string-array name="stop_condition">
-        <item>不停止</item>
-        <item>低电平触发</item>
-        <item>高电平触发</item>
-        <item>上升沿触发</item>
-        <item>下降沿触发</item>
-        <item>任意边沿触发</item>
-        <item>延时停止</item>
+        <item>Nonstop</item>
+        <item>Low level trigger</item>
+        <item>High level trigger</item>
+        <item>Rising edge trigger</item>
+        <item>Falling edge trigger</item>
+        <item>Any edge trigger</item>
+        <item>Delay stop</item>
     </string-array>
 
     <string-array name="connect">
         <!--<item>TcpClient</item>-->
-        <!--<item>蓝牙连接</item>-->
+        <!--<item>Bluetooth</item>-->
         <!--<item>BleBluetooth</item>-->
         <!--<item>AndroidRs485</item>-->
         <item>AndroidRs232</item>
         <!--<item>AndroidUsbSerial</item>-->
-        <!--<item>Tcp服务器</item>-->
+        <!--<item>TcpServer</item>-->
     </string-array>
 
     <string-array name="port">
@@ -219,26 +219,26 @@
     </string-array>
 
     <string-array name="wg_formatter">
-        <item>韦根26</item>
-        <item>韦根34</item>
-        <item>韦根66</item>
+        <item>wiggins 26</item>
+        <item>wiggins 34</item>
+        <item>wiggins 66</item>
     </string-array>
 
     <string-array name="wg_data">
-        <item>传输EPC末尾数据</item>
-        <item>传输TID末尾数据</item>
+        <item>Transfer the EPC end data</item>
+        <item>Transfer the TID end data</item>
     </string-array>
 
     <string-array name="eas_area">
-        <item>匹配EPC区</item>
-        <item>匹配TID</item>
-        <item>匹配用户区</item>
-        <item>匹配保留区</item>
+        <item>Match EPC</item>
+        <item>Match TID</item>
+        <item>Match UserData</item>
+        <item>Match ReserveData</item>
     </string-array>
 
     <string-array name="tid_read_mode">
-        <item>自适应</item>
-        <item>定长</item>
+        <item>Auto</item>
+        <item>Fixed</item>
     </string-array>
 
     <string-array name="ltu">
@@ -247,16 +247,16 @@
     </string-array>
 
     <string-array name="read_6b_content">
-        <item>仅读TID</item>
-        <item>TID+用户数据</item>
-        <item>仅读用户数据</item>
+        <item>OnlyTID</item>
+        <item>TID+User</item>
+        <item>OnlyUser</item>
     </string-array>
 
     <string-array name="cus_gb_mode">
-        <item>不匹配</item>
+        <item>Mismatching</item>
         <item>TID</item>
         <item>EPC</item>
-        <item>安全区</item>
+        <item>SafeArea</item>
         <item>user00</item>
         <item>user01</item>
         <item>user02</item>
@@ -295,8 +295,8 @@
     </string-array>
 
     <string-array name="cus_gb_write_mode">
-        <item>标签编码区</item>
-        <item>标签安全区</item>
+        <item>EPC</item>
+        <item>SafeArea</item>
         <item>User0</item>
         <item>User1</item>
         <item>User2</item>
@@ -316,9 +316,9 @@
     </string-array>
 
     <string-array name="cus_gb_lock_group">
-        <item>标签信息区</item>
-        <item>标签编码区</item>
-        <item>标签安全区</item>
+        <item>TID</item>
+        <item>EPC</item>
+        <item>SafeArea</item>
         <item>User0</item>
         <item>User1</item>
         <item>User2</item>
@@ -338,18 +338,18 @@
     </string-array>
 
     <string-array name="cus_gb_lock_operation">
-        <item>可读可写</item>
-        <item>可读不可写</item>
-        <item>不可读可写</item>
-        <item>不可读不可写</item>
-        <item>安全模式1</item>
-        <item>安全模式2</item>
-        <item>安全模式3</item>
+        <item>readable and writeable</item>
+        <item>readable not writeable</item>
+        <item>not readable but writeable</item>
+        <item>not readable and writeable</item>
+        <item>security mode1</item>
+        <item>security mode2</item>
+        <item>security mode3</item>
     </string-array>
 
     <string-array name="beep_switch">
-        <item>读写器控制</item>
-        <item>上位机控制</item>
+        <item>Reader control</item>
+        <item>Upper computer control</item>
     </string-array>
 
     <string-array name="frePoint">
@@ -408,4 +408,5 @@
     <string-array name="cus_6b_area">
         <item>UserData</item>
     </string-array>
+
 </resources>
