--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,7 +140,7 @@
                 <Spinner
                     android:id="@+id/spinner_tybe_scan"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="1px"
                     android:layout_gravity="center"
                     android:background="@color/TRANSPARENT"
                     android:clickable="false"
