--- a/app/src/main/res/layout/fragment_smart_scan.xml
+++ b/app/src/main/res/layout/fragment_smart_scan.xml
@@ -10,7 +10,7 @@
     android:focusable="true">
 
     <EditText
-        android:id="@+id/port2"
+        android:id="@+id/epc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -137,6 +137,6 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/port2" />
+        app:layout_constraintTop_toBottomOf="@+id/epc" />
 
 </android.support.constraint.ConstraintLayout>
