--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/client_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="@color/white"
-    android:layoutDirection="ltr"
-    tools:context=".SAED.UI.Activities.ClientActivity" />
+    android:orientation="vertical"
+    tools:context=".SAED.UI.Activities.ClientActivity">
+
+    <TextView
+        android:id="@+id/not_connect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:background="@color/red"
+        android:fontFamily="@font/cairo"
+        android:gravity="center"
+        android:text="@string/not_connected"
+        android:textColor="@color/white"
+        app:layout_anchor="@+id/linearLayout" />
+
+    <FrameLayout
+        android:id="@+id/client_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:layoutDirection="ltr" />
+</LinearLayout>
